--- a/indexx.html
+++ b/indexx.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brain Platter | Sensation & Perception Study App</title>
+    <title>Sensation & Perception Study App</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -810,7 +810,6 @@
                 <!-- Batch Info in Review Mode -->
                 <div class="batch-owners" style="margin-top: 40px;">
                     <h3><i class="fas fa-users"></i> Connect with Batchmates</h3>
-                    <p>Join the NS11 Fresh Telegram group to discuss questions, share insights, and study together!</p>
                     <a href="https://t.me/NS11fresh" target="_blank" class="btn btn-info" style="display: inline-flex; margin-top: 15px;">
                         <i class="fab fa-telegram"></i> Join Telegram Group
                     </a>
@@ -820,7 +819,6 @@
         
         <!-- Footer -->
         <div class="footer">
-            <p>Brain Platter App | Psychology Chapter 2: Sensation & Perception | Study Tool</p>
             <p>NS11 Fresh Batch | Telegram: <a href="https://t.me/NS11fresh" target="_blank" style="color: var(--info);">t.me/NS11fresh</a></p>
         </div>
     </div>
